[workspace]
resolver = "3"
members = [
  "crates/frontend",
  "crates/backend",
  # "crates/modules" # пока не реализовано
]

[workspace.package]
name = "hypha"
description = "Hytale launcher oriented on modding."
version = "0.1.0"
edition = "2024"
license = "MIT"

# [dependencies]

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
hypha-backend = { path = "crates/backend" }
